--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ tauri = { version = "1.5.1", features = [] }
 reqwest = { version = "0.11", features = ["blocking"] }
 flate2 = "1.0"
 tokio = { version = "1", features = ["full"] }
+sled = "0.34.7"
+lazy_static = "1.4.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
