--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.1", features = [] }
+tauri = { version = "1.5.1", features = ["system-tray"] }
 reqwest = { version = "0.11", features = ["blocking"] }
 flate2 = "1.0"
 tokio = { version = "1", features = ["full"] }
