--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,12 +17,14 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.1", features = ["system-tray"] }
+tauri = { version = "1.5.1", features = [ "api-all", "system-tray"] }
 reqwest = { version = "0.11", features = ["blocking"] }
 flate2 = "1.0"
 tokio = { version = "1", features = ["full"] }
 sled = "0.34"
 lazy_static = "1.4.0"
+log = "0.4"
+env_logger = "0.10"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
